Openshift/backend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: opendrive
  annotations:
    haproxy.router.openshift.io/timeout: 120s
    haproxy.router.openshift.io/request-body-max-size: "104857600" 
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
